--- a/config.toml
+++ b/config.toml
@@ -3,10 +3,14 @@ ticker1 = "ENGI.PA"
 ticker2= "VIE.PA"
 ticker3 = "^FCHI"
 
+[analyse]
+ticker1 = "ENGI.PA"
+ticker2= "VIE.PA"
+
 [initialisation]
 field_to_keep = "Close"
 begin_date = "2022-01-01"
-end_date = "2024-12-10"
+end_date = "2024-12-31"
 
 [chart]
 colorCAC40 = "blue"
