ajout graphique cours des actions

--- a/config.toml
+++ b/config.toml
@@ -12,5 +12,13 @@ end_date = "2024-12-31"
 colorCAC40 = "blue"
 colorCompany1 = "red"
 colorCompany2 = "green"
-title= "Cours du CAC40 vs "
+column1 = "ENGI.PA"
+column2 = "VIE.PA"
+column3 = "^FCHI"
+label1 = "Engie"
+label2 = "Veolia"
+label3 = "CAC40"
+legend_loc1 = "upper left"
+legend_loc2 = "upper right"
+rotation = 90
 
